<resources>
    <string name="app_name">大猫通讯录</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="OK">确定</string>
    <string name="finish">完成</string>
    <string name="see">查看</string>
    <string name="all">全部</string>
    <string name="yes">同意</string>
    <string name="next">下一步</string>
    <string name="default_txt">默认</string>
    <string name="no">无</string>
    <string name="confirm">提交</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <string name="close">关闭</string>
    <string name="back_again_exit">再按一次退出程序</string>
    <string name="update">更新</string>
    <string name="unknow">未知</string>
    <string name="reset">修改</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="yuan_mark">元</string>
    <string name="day_mark">天</string>
    <string name="day">日</string>
    <string name="hour_mark">小时</string>
    <string name="hour">时</string>
    <string name="mimut">分</string>
    <string name="second">秒</string>
    <string name="yuan">¥</string>
    <string name="race_mark">%</string>
    <string name="add_mark">+</string>
    <string name="minus_mark">-</string>
    <string name="wan_mark">万</string>
    <string name="wanyuan_mark">万元</string>
    <string name="people_mark">人次</string>
    <string name="month">月</string>
    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ:.,?@!#$%^*()-=_+|;`~/"'&amp;&lt;&gt;\\\</string>
    <string name="id_card_digits">0123456789xX</string>
    <string name="pass_too_shore">密码不能少于8位</string>
    <string name="pass_too_easy">密码必须包含数字和英文字母</string>
    <string name="pass_new_same">新密码不能和旧密码相同</string>
    <string name="pass_error_part">密码错误</string>
    <string name="add_new_title">新建联系人</string>
    <string name="select_title">选择联系人</string>
    <string name="add_new_error1">请输入姓名</string>
    <string name="add_new_error2">请输入手机号</string>
    <string name="home_one">通话</string>
    <string name="home_two">联系人</string>
    <string name="home_three">黄页</string>
    <string name="phone_one">全部通话</string>
    <string name="phone_two">未接来电</string>
    <string name="phone_three">常用联系人</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="plant_phone">预留手机号 : </string>
    <string name="img_identity_code">图形码</string>
    <string name="img_identity_code_pls">请输入图形验证码</string>
    <string name="right_identity_txt">验证码</string>
    <string name="identity_code">请输入验证码</string>
    <string name="identity_code_phone">验证码</string>
    <string name="input_identity_code_phone">请输入手机验证码</string>
    <string name="input_identity_code_phone_error">请输入正确的手机验证码</string>
    <string name="get_identity_code">获取验证码</string>
    <string name="get_identity_code_not">请先获取验证码</string>
    <string name="send_again">重发（%1$d）</string>
    <string name="identity_code_error">图形验证码错误</string>
    <string name="phone_identity_code_error">请输入手机验证码</string>
    <string name="phone_identity_error">验证码不正确</string>
    <string name="login_hint_password">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="user_pwd_info">登录密码</string>
    <string name="user_pwd">密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="regist">注册</string>
    <string name="regist_gift">注册领红包 > </string>
    <string name="login_name_empty">用户名不能为空</string>
    <string name="login_pwd_empty">密码不能为空</string>
    <string name="edit_login_pwd">修改登录密码</string>
    <string name="edit_login_pwd_old">旧密码</string>
    <string name="edit_login_pwd_new">新密码</string>
    <string name="edit_login_pwd_confirm">确认密码</string>
    <string name="pls_login_pwd_again">请再次输入新密码</string>
    <string name="pls_input_again">请再次输入</string>
    <string name="edit_login_pwd_ok">确认修改</string>
    <string name="edit_login_pwd_success">修改成功</string>
    <string name="edit_login_pwd_msg">是否终止修改平台手机号？</string>
    <string name="edit_plant_phone">修改平台手机号</string>
    <string name="plant_phone_orignal">原手机号码</string>
    <string name="plant_phone_new">新手机号码</string>
    <string name="edit_plant_phone_orignal">验证原手机号码</string>
    <string name="edit_plant_phone_new">修改新手机号码</string>
    <string name="edit_blank_phone">修改银行卡预留手机号</string>
    <string name="edit_blank_phone_info">您正在更新银行卡预留手机号</string>
    <string name="edit_blank_phone_name">用户姓名: </string>
    <string name="edit_blank_phone_car">已绑定银行卡: </string>
    <string name="input_blank_phone_car_code">请输入新银行卡预留手机号</string>
    <string name="edit_blank_phone_confirm">确定修改</string>
    <string name="not_added_car">请先绑定银行卡</string>
    <string name="added_car">已绑定</string>
    <string name="pay_pwd_edit">修改支付密码</string>
    <string name="pay_pwd_edit_info">您正在修改支付密码</string>
    <string name="pay_pwd_set_info">您正在设置支付密码</string>
    <string name="log_pwd">请输入密码</string>
    <string name="reset_login_pwd">重置密码</string>
    <string name="reset_login_success">重置密码成功！</string>
    <string name="normal_uestion">常见问题</string>
    <string name="custom_service">客服电话</string>
    <string name="advice">给我鼓励</string>
    <string name="product_info">项目信息</string>
    <string name="pre_risk_control">贷前风控</string>
    <string name="after_risk_control">贷后风控</string>
    <string name="risk_control_info">风控信息</string>
    <string name="risk_evaluate">借款人风险评估</string>
    <string name="car_value_evaluate">车辆价值评估</string>
    <string name="car_chance_control">车辆抵押率控制</string>
    <string name="car_control">抵押车辆监管/留置</string>
    <string name="car_info">车辆手续</string>
    <string name="law_info">涉诉信息</string>
    <string name="product_risk_plan">项目风险保障方案</string>
    <string name="thing_handle">抵押物处理</string>
    <string name="assurement">担保机构担保</string>
    <string name="base_info">基本信息</string>
    <string name="product_code">项目编号</string>
    <string name="invest_tatol">借款总金额</string>
    <string name="invest_use">借款用途</string>
    <string name="invest_company">借款企业</string>
    <string name="company_info">企业信息</string>
    <string name="company_name">企业名称</string>
    <string name="company_person">企业法人</string>
    <string name="company_code">统一信用代码</string>
    <string name="company_address">企业地址</string>
    <string name="invest_user_birth">出生日期</string>
    <string name="invest_marry">婚否</string>
    <string name="invest_study">学历</string>
    <string name="invest_user_profession">职业</string>
    <string name="invest_user_credit">征信</string>
    <string name="invest_user_house">房产</string>
    <string name="invest_pledge_info">抵押信息</string>
    <string name="invest_pledge_way">抵押方式</string>
    <string name="car_pledge_name">车辆名称</string>
    <string name="car_pledge_code">车辆号牌</string>
    <string name="car_pledge_color">车辆颜色</string>
    <string name="car_pledge_lvl">排量</string>
    <string name="product_introduce">项目介绍</string>
    <string name="pay_back_orignal">还款来源</string>
    <string name="waitting_pay">待支付</string>
    <string name="expect_income_yuan">到期收益（元）</string>
    <string name="end_time">结束时间：</string>
    <string name="continue_pay">继续支付</string>
    <string name="change">兑换</string>
    <string name="change_success">兑换成功</string>
    <string name="repay">返现券</string>
    <string name="use_product">使用项目： </string>
    <string name="resource">来源： </string>
    <string name="change_gift">兑换红包</string>
    <string name="change_gift_code">请输入兑换码兑换红包</string>
    <string name="confirm_change">确认兑换</string>
    <string name="not_use_coupon">不使用红包</string>
    <string name="gift_rule">使用规则： </string>
    <string name="gift_date">有效期至： </string>
    <string name="user_info">个人信息</string>
    <string name="avast">头像</string>
    <string name="user_id">用户ID</string>
    <string name="copy">复制</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_birth">生日</string>
    <string name="about">关于网筹金融</string>
    <string name="about_version">版本说明</string>
    <string name="website">官方网站</string>
    <string name="website_value">www.jinrongweb.com</string>
    <string name="webkit">官方微信</string>
    <string name="webkit_value">wangchoujinrong</string>
    <string name="account">账户设置</string>
    <string name="phone">400-110-1122</string>
    <string name="phone_line"><u>400-110-1122</u></string>
    <string name="phone_dlg">网筹客服：400-110-1122</string>
    <string name="ok_dlg">呼叫</string>
    <string name="work_time">服务时间：9:00-18:00</string>
    <string name="account_safe">账户资金安全</string>
    <string name="gesture_pwd">手势密码</string>
    <string name="gesture_hide">隐藏手势轨迹</string>
    <string name="gesture_edit">修改手势密码</string>
    <string name="gesture_edit_help">8～16位字母和数字组合</string>
    <string name="gesture_edit_ok">验证</string>
    <string name="gesture_edit_title">验证登录密码</string>
    <string name="help_center">帮助中心</string>
    <string name="about_us">关于我们</string>
    <string name="quit">安全退出</string>
    <string name="notification">消息订阅</string>
    <string name="feed">意见反馈</string>
    <string name="feed_info">请写下您的意见和建议</string>
    <string name="notification_info">设置消息是否通知</string>
    <string name="notification_back">账户回款</string>
    <string name="notification_back_info">账户中项目的回款信息</string>
    <string name="notification_gift">红包到期</string>
    <string name="notification_gift_info">红包即将到期提醒</string>
    <string name="notification_pay">充值提现</string>
    <string name="notification_pay_info">账户进行充值与体现操作成功后</string>
    <string name="notifi_plant">站内消息</string>
    <string name="not_read">未读</string>
    <string name="had_read">已读</string>
    <string name="all_read">标为已读</string>
    <string name="close_edit">关闭编辑</string>
    <string name="back_plan">还款计划</string>
    <string name="back_time">还款时间</string>
    <string name="back_money">还款金额</string>
    <string name="back_state">状态</string>
    <string name="ok_state">以还款</string>
    <string name="back_priod">还款期数</string>
    <string name="repay_priod">回款期数</string>
    <string name="repay_money">回款金额</string>
    <string name="repay_time">回款时间</string>
    <string name="priod">期数</string>
    <string name="invest_history">投资记录</string>
    <string name="most">一鸣惊人</string>
    <string name="last">一锤定音</string>
    <string name="last_info">未被获得，还有机会呦！</string>
    <string name="end_income">到期收益</string>
    <string name="lend_money">出借金额</string>
    <string name="lend_money_yuan">出借金额（元）</string>
    <string name="lend_rate">借款利率</string>
    <string name="lend_durat">借款期限</string>
    <string name="lend_durat_day">借款期限（天）</string>
    <string name="plant_add_rate">平台加息</string>
    <string name="use_back">使用返现券</string>
    <string name="use_add">使用加息券</string>
    <string name="rate_method">计息方式</string>
    <string name="rate_method_nextday">放款次日计息</string>
    <string name="pay_method">还款方式</string>
    <string name="pay_method_ayb">按月付息，到期还本</string>
    <string name="last_time">剩余时间</string>
    <string name="last_money">剩余可投</string>
    <string name="last_money_text">可投</string>
    <string name="pay_now">立即投资</string>
    <string name="payment">回款计划</string>
    <string name="contract">项目合同</string>
    <string name="contract_no_msg">合同未生成</string>
    <string name="contract_error_msg">合同读取失败</string>
    <string name="contract_mark">《借款协议》</string>
    <string name="contract_info">《借款协议》的格式和条款</string>
    <string name="contract_info2">同意《借款协议》的格式和条款,已充分了解并知晓产品风险，愿意承担相关风险。</string>
    <string name="lend_money_nomark">借款金额</string>
    <string name="home">收藏</string>
    <string name="product">拨号</string>
    <string name="user">菜单</string>
    <string name="add">新建</string>
    <string name="scan">扫名片</string>
    <string name="search">搜索</string>
    <string name="all_log">查看全部通话记录</string>
    <string name="new_people">新建联系人</string>
    <string name="save_people">保存到已有联系人</string>
    <string name="stop_people">阻止此号码</string>
</resources>