<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true">

    <RadioGroup
        android:id="@+id/filter_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/call"
            android:layout_width="@dimen/aml_filter_width"
            android:layout_height="@dimen/ami_filter_height"
            android:background="@drawable/invest_filter_btn"
            android:button="@null"
            android:checked="true"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/home_one"
            android:textColor="@drawable/invest_filter_txt"
            android:textSize="@dimen/PX_34" />

        <View
            android:layout_width="@dimen/DP_1"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/ami_filter_divider"
            android:layout_marginTop="@dimen/ami_filter_divider"
            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/people"
            android:layout_width="@dimen/aml_filter_width"
            android:layout_height="@dimen/ami_filter_height"
            android:background="@drawable/invest_filter_btn"
            android:button="@null"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/home_two"
            android:textColor="@drawable/invest_filter_txt"
            android:textSize="@dimen/PX_34" />

        <View
            android:layout_width="@dimen/DP_1"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/ami_filter_divider"
            android:layout_marginTop="@dimen/ami_filter_divider"
            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/yellow"
            android:layout_width="@dimen/aml_filter_width"
            android:layout_height="@dimen/ami_filter_height"
            android:background="@drawable/invest_filter_btn"
            android:button="@null"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/home_three"
            android:textColor="@drawable/invest_filter_txt"
            android:textSize="@dimen/PX_34" />
    </RadioGroup>


    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filter_group" />

    <View
        android:id="@+id/d2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_1"
        android:layout_below="@+id/filter_group"
        android:background="@color/divider_color" />


</RelativeLayout>