<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <View
        android:id="@+id/d1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_1"
        android:background="@color/divider_color" />


    <com.damao.tongxunlu.view.refreshlayout.MaterialRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/d1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </com.damao.tongxunlu.view.refreshlayout.MaterialRefreshLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_90"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/background_color"
        android:weightSum="2">
        <TextView
            android:id="@+id/collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:focusable="true"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/home"
            android:textSize="@dimen/PX_34"
            android:visibility="gone"
            android:textColor="@drawable/tabitem_txt_sel" />
        <TextView
            android:id="@+id/call"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:focusable="true"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/product"
            android:textSize="@dimen/PX_34"
            android:textColor="@drawable/tabitem_txt_sel" />
        <TextView
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:focusable="true"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/user"
            android:textSize="@dimen/PX_34"
            android:textColor="@drawable/tabitem_txt_sel" />
    </LinearLayout>

    <View
        android:id="@+id/d3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_1"
        android:layout_above="@+id/footer"
        android:background="@color/divider_color" />
</RelativeLayout>