<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/ld_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_corn_back"
    android:padding="@dimen/DP_0">

    <LinearLayout
        android:id="@+id/content_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_30"
            android:gravity="center|bottom"
            android:layout_marginStart="@dimen/default_30"
            android:layout_marginEnd="@dimen/default_30"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="@dimen/PX_32" />

        <ImageView
            android:id="@+id/dialog_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ld_img_top"
            android:scaleType="center"
            android:visibility="gone"
            android:src="@drawable/accountsetting_redphone" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ld_txt_top"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_marginStart="@dimen/default_30"
            android:layout_marginEnd="@dimen/default_30"
            android:text="@string/phone_dlg"
            android:textColor="@color/black"
            android:textSize="@dimen/PX_26" />
    </LinearLayout>




    <View
        android:id="@+id/d1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_1"
        android:layout_below="@+id/content_panel"
        android:layout_marginTop="@dimen/ld_divider_top"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="@dimen/ld_btn_width"
        android:layout_height="@dimen/ld_btn_height"
        android:layout_below="@+id/d1"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/dialog_btn_color"
        android:textSize="@dimen/PX_30" />
    <View
        android:id="@+id/d2"
        android:layout_width="@dimen/DP_1"
        android:layout_height="@dimen/ld_btn_height"
        android:layout_below="@+id/d1"
        android:background="@color/divider_color"
        android:layout_toRightOf="@+id/cancel"/>

    <TextView
        android:id="@+id/ok"
        android:layout_width="@dimen/ld_btn_width"
        android:layout_height="@dimen/ld_btn_height"
        android:layout_below="@+id/d1"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/dialog_btn_color"
        android:textSize="@dimen/PX_30" />

    <TextView
        android:id="@+id/positi"
        android:layout_width="@dimen/ld_width"
        android:layout_height="@dimen/ld_btn_height"
        android:layout_below="@+id/d1"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/dialog_btn_color"
        android:textSize="@dimen/PX_30"
        android:visibility="gone"/>
</RelativeLayout>